nobase_include_HEADERS = \
	miblab/commandline.h \
	miblab/datafile.h \
	miblab/datafileheader.h \
	miblab/error.h \
	miblab/machine.h \
	miblab/matrix.h \
	miblab/md5str.h \
	miblab/quicksort.h \
	miblab/rand.h \
	miblab/statistics.h \
	miblab/strconv.h \
	miblab/stringtokenizer.h \
	miblab/uniqid.h \
	miblab/feature_selection.h \
	miblab/normalize.h \
	miblab/classifiers/classifier.h \
	miblab/classifiers/classifier_shared.h \
	miblab/classifiers/bayes.h \
	miblab/classifiers/em.h \
	miblab/classifiers/knn.h \
	miblab/classifiers/libsvm.h \
	miblab/classifiers/svm.h \
	miblab/classifiers/lc.h \
	miblab/classifiers/dtree.h \
	miblab/classifiers/forest.h \
	miblab/classifiers/parzen.h \
	miblab/classifiers/lr.h \
	miblab/classifiers/lr/am_string.h \
	miblab/classifiers/lr/am_string_array.h \
	miblab/classifiers/lr/amar.h \
	miblab/classifiers/lr/ambs.h \
	miblab/classifiers/lr/amdym.h \
	miblab/classifiers/lr/amdyv.h \
	miblab/classifiers/lr/amdyv_array.h \
	miblab/classifiers/lr/amiv.h \
	miblab/classifiers/lr/amma.h \
	miblab/classifiers/lr/amvpv.h \
	miblab/classifiers/lr/file.h \
	miblab/classifiers/lr/genarray.h \
	miblab/classifiers/lr/liblr.h \
	miblab/classifiers/lr/lin_conjgrad.h \
	miblab/classifiers/lr/lrutils.h \
	miblab/classifiers/lr/pfload.h \
	miblab/classifiers/lr/prec.h \
	miblab/classifiers/lr/precs.h \
	miblab/classifiers/lr/score.h \
	miblab/classifiers/lr/spardat.h \
	miblab/classifiers/lr/standard.h

